[package]
name = "discover"
version = "0.1.0"
authors = ["taoyu <t1997y@vip.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1"
serde_json = "1.0"
futures = "0.3"
tower = "0.3"
pin-project = "0.4"
zookeeper = "0.5"
tokio = {version = "0.2", features = ["blocking"]}

[[test]]
name = "test"
path = "tests/test.rs"