[package]
name = "discover"
version = "0.1.0"
authors = ["taoyu <t1997y@vip.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["registry-zk"]
registry-zk = ["zookeeper"]

[dependencies]
percent-encoding = "2.1"
serde_json = "1.0"
futures = "0.3"
tower = "0.3"
pin-project = "0.4"
zookeeper = {version = "0.5", optional = true}
tokio = {version = "0.2", features = ["blocking"]}
fxhash = "0.2"
log = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[[test]]
name = "test"
path = "tests/test.rs"